--- a/app/globals.css
+++ b/app/globals.css
@@ -175,3 +175,8 @@
     @apply bg-background text-foreground;  /* Основные цвета из переменных */
   }
 }
+@layer utilities {
+  .wrapper {
+    @apply w-full px-5 md:px-10 mx-auto max-w-[390px] md:max-w-[1480px];
+  }
+}
